# Zephyra

./: .gitignore  .replit  Anchor.toml  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  MAGICBLOCK_INTEGRATION.md  MANUAL_INSTALLATION.md  PLAYGROUND_DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  SMART_CONTRACTS_REQUIREMENTS.md  SOLANA_PLAYGROUND_DEPLOYMENT.md  WINDOWS_DEPLOYMENT_GUIDE.md  build-and-deploy.sh  design_guidelines.md  env.example  package-lock.json  package.json  replit.md  rust-toolchain.toml  tsconfig.json
attached_assets/: Pasted--SentinelX-Platform-eksekusi-proteksi-DeFi-real-time-terpadu-dengan-simulasi-AI-MEV-shielding--1761401996779_1761401996780.txt  Pasted-Berdasarkan-dokumentasi-resmi-MagicBlock-SDK-blog-The-Ephemeral-Rollup-Effect-dan-repositori-GitHu-1761421536051_1761421536051.txt  Pasted-Protokol-Aegis-Co-Pilot-DeFi-Cerdas-Pelindung-Transaksi-Anda-Konsep-Ambisius-The-Big-Idea-Aeg-1761401098477_1761401098478.txt
client/: index.html
idl/: zephyra_batch_coordinator.json  zephyra_proof_verifier.json  zephyra_protection_manager.json  zephyra_route_executor.json
playground/: batch-coordinator-single-file.rs  proof-verifier-single-file.rs  protection-manager-single-file.rs  route-executor-single-file.rs
programs/zephyra-batch-coordinator/: Cargo.toml  cargo.toml
programs/zephyra-batch-coordinator/src/: lib.rs
programs/zephyra-protection-manager/: Cargo.toml  cargo.toml
programs/zephyra-protection-manager/src/: lib.rs  magicblock_integration.rs  protection_manager.rs
programs/zephyra-route-executor/: Cargo.toml  cargo.toml
programs/zephyra-route-executor/src/: lib.rs
scripts/: backend-integration.ts  build-linux.sh  build-simple.sh  build.sh  deploy-wsl.sh  deploy.sh  examples.ts  install-windows.ps1  magicblock-client.ts  smart-contracts-integration.ts  validate-and-deploy.sh  zephyra-magicblock-integration.ts
server/: routes-smart-contracts.ts  routes.ts  storage.ts
shared/: schema.ts
(+23 files in other folders)
