[workspace]
members = [
    "programs/zephyra-protection-manager",
    "programs/zephyra-route-executor", 
    "programs/zephyra-proof-verifier",
    "programs/zephyra-batch-coordinator",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


