[package]
name = "zephyra-protection-manager"
version = "1.0.0"
description = "Zephyra Protection Manager Program - Central coordinator for MEV protection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zephyra_protection_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"


